fixed horizontal scroll in mobile and tablet

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,4 +1,5 @@
-body {
+html, body {
   margin:0;
+  max-width: 100%;
   overflow-x: hidden;
 }
